--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@
       {{ serviceName }}
     </h1>
 
-    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
+  <p><a href="start-page">Start page</p></a>
   </div>
 </div>
 
